Update example with schema modules
